restore missing clip padding

--- a/web/examples/pareto-chart.html
+++ b/web/examples/pareto-chart.html
@@ -83,6 +83,7 @@
         .height(360)
         .x(d3.scaleBand())
         .elasticX(true)
+        .clipPadding(2)
         .xUnits(dc.units.ordinal)
         .group(pg)
         ._rangeBandPadding(1)
