--- a/web-src/index.html
+++ b/web-src/index.html
@@ -65,7 +65,7 @@
 
 <p>
   Get help faster with a working example! Fork these to get started:<br>
-  <a href="https://jsfiddle.net/gordonwoodhull/raxxxmk1/">example jsFiddle</a> - <a href="https://jsfiddle.net/gordonwoodhull/ckf3d2cv/">blank jsFiddle</a> - <a href="http://blockbuilder.org/gordonwoodhull/ecce8e32d64c662cffd5">example bl.ock</a> - <a href="http://blockbuilder.org/gordonwoodhull/9ab997c9a8d7d3380364">blank bl.ock</a>
+  <a href="https://jsfiddle.net/gordonwoodhull/0k5ygjqd/">blank jsFiddle</a> - <a href="https://jsfiddle.net/gordonwoodhull/0ymLxuc2/">example jsFiddle</a> - <a href="https://blockbuilder.org/gordonwoodhull/f6bab3d2f5b34018548207014b4056bf">blank bl.ock</a> - <a href="http://blockbuilder.org/gordonwoodhull/ecce8e32d64c662cffd5">example bl.ock</a>
 </p>
 
 <h3>Examples</h3>
