move api-latest to docs/ and update all links
drop any direct links into that markdown - html docs are much better

--- a/web-src/examples/align-axes.html
+++ b/web-src/examples/align-axes.html
@@ -70,9 +70,9 @@
       <script type="text/javascript" src="./header.js"></script>
 
       <p>This page demonstrates the
-        <a href="https://github.com/dc-js/dc.js/blob/develop/web/docs/api-latest.md#dc.compositeChart+alignYAxes">compositeChart.alignYAxes</a>
+        <a href="https://dc-js.github.io/dc.js/docs/html/CompositeChart.html#alignYAxes">compositeChart.alignYAxes</a>
         feature on different combinations of negative and positive data. <code>alignYAxes</code> is only valid if both child charts have
-        <a href="https://github.com/dc-js/dc.js/blob/develop/web/docs/api-latest.md#dc.coordinateGridMixin+elasticY"><code>elasticY</code></a>.
+        <a href="https://dc-js.github.io/dc.js/docs/html/CoordinateGridMixin.html#elasticY"><code>elasticY</code></a>.
         The left zero point will be horizontal with the right zero point, and the heights of the two series will be equal.
         (As with <code>elasticY</code>, height is currently measured from the y=0 line - see <a href="https://github.com/dc-js/dc.js/issues/667">#667</a>.)</p>
     </div>
