--- a/web-src/examples/filtering-removing.html
+++ b/web-src/examples/filtering-removing.html
@@ -14,7 +14,7 @@
   <p>Example demonstrating using a "<a href="https://github.com/dc-js/dc.js/wiki/FAQ#fake-groups">Fake Group</a>" to remove
     the empty bars of an ordinal bar chart when their values drop to zero.</p>
 
-  <p>(Note the use of <code><a href="https://github.com/dc-js/dc.js/blob/develop/web/docs/api-latest.md#dc.coordinateGridMixin+elasticX">.elasticX(true)</a></code>
+  <p>(Note the use of <code><a href="https://dc-js.github.io/dc.js/docs/html/CoordinateGridMixin.html#elasticX">.elasticX(true)</a></code>
     to force calculation of the X domain each round.)</p>
 
 <div id="chart-ring-year"></div>
