--- a/web-src/examples/horizon-chart.html
+++ b/web-src/examples/horizon-chart.html
@@ -108,14 +108,15 @@
       return {
           all: () => {
               return group.all().slice().sort(
-                  ({key: keyA}, {key: keyB}) => // d3.ascending(keyA[0],keyB[0]) || d3.ascending(keyA[1],keyB[1]));
-                  {
-                      if(keyA[0] < keyB[0])
-                          return -1;
-                      else if(keyA[0] > keyB[0])
-                          return 1;
-                      return keyA[1] - keyB[1];
-                  });
+                  ({key: keyA}, {key: keyB}) => d3.ascending(keyA[0],keyB[0]) || d3.ascending(keyA[1],keyB[1]));
+              // equivalent to
+                  // {
+                  //     if(keyA[0] < keyB[0])
+                  //         return -1;
+                  //     else if(keyA[0] > keyB[0])
+                  //         return 1;
+                  //     return keyA[1] - keyB[1];
+                  // });
           }
       };
   }
