apply_resizing to an array of charts, with adjustX/Y functions
in make the function more general purpose, as requested in this user group discussion

https://groups.google.com/d/msgid/dc-js-user-group/25f3869e-cca1-4d62-8155-0b992a356670%40googlegroups.com?utm_medium=email&utm_source=footer

--- a/web-src/resizing/resizing-scatter-brushing.html
+++ b/web-src/resizing/resizing-scatter-brushing.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="../js/crossfilter.js"></script>
   <script type="text/javascript" src="../js/dc.js"></script>
   <script type="text/javascript" src="dc-restore-transition-duration.js"></script>
+  <script type="text/javascript" src="dc-resizing.js"></script>
   <script type="text/javascript">
 
 const urlParams = new URLSearchParams(window.location.search),
@@ -89,20 +90,7 @@ if(useCanvas) {
 
 dc.renderAll();
 
-// respond to browser resize (not necessary if width/height is static)
-window.onresize = function() {
-    chart1
-        .width(window.innerWidth/2 - fudge)
-        .height(window.innerHeight - fudge)
-        .rescale();
-
-    chart2
-        .width(window.innerWidth/2 - fudge)
-        .height(window.innerHeight - fudge)
-        .rescale();
-
-    redraw_chart_no_transitions([chart1,chart2]);
-};
+apply_resizing([chart1, chart2], x => x/2 - fudge, fudge);
 
   </script>
 
