Updating stocks sample to use explicit groups.

--- a/web-src/index.html
+++ b/web-src/index.html
@@ -97,7 +97,7 @@
 <div class="row">
     <div id="yearly-bubble-chart" class="dc-chart">
         <strong>Yearly Performance</strong> (radius: fluctuation/index ratio, color: gain/loss)
-        <a class="reset" href="javascript:yearlyBubbleChart.filterAll();dc.redrawAll();"
+        <a class="reset" href="javascript:yearlyBubbleChart.filterAll();chartGroup.redrawAll();"
            style="display: none;">reset</a>
 
         <div class="clearfix"></div>
@@ -107,21 +107,21 @@
 <div class="row">
     <div id="gain-loss-chart">
         <strong>Days by Gain/Loss</strong>
-        <a class="reset" href="javascript:gainOrLossChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:gainOrLossChart.filterAll();chartGroup.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
     </div>
 
     <div id="quarter-chart">
         <strong>Quarters</strong>
-        <a class="reset" href="javascript:quarterChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:quarterChart.filterAll();chartGroup.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
     </div>
 
     <div id="day-of-week-chart">
         <strong>Day of Week</strong>
-        <a class="reset" href="javascript:dayOfWeekChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:dayOfWeekChart.filterAll();chartGroup.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
     </div>
@@ -129,7 +129,7 @@
     <div id="fluctuation-chart">
         <strong>Days by Fluctuation(%)</strong>
         <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-        <a class="reset" href="javascript:fluctuationChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+        <a class="reset" href="javascript:fluctuationChart.filterAll();chartGroup.redrawAll();" style="display: none;">reset</a>
 
         <div class="clearfix"></div>
     </div>
@@ -139,7 +139,7 @@
     <div id="monthly-move-chart">
         <strong>Monthly Index Abs Move & Volume/500,000 Chart</strong>
         <span class="reset" style="display: none;">range: <span class="filter"></span></span>
-        <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();dc.redrawAll();"
+        <a class="reset" href="javascript:moveChart.filterAll();volumeChart.filterAll();chartGroup.redrawAll();"
            style="display: none;">reset</a>
 
         <div class="clearfix"></div>
@@ -156,7 +156,7 @@
     <div>
         <div class="dc-data-count">
             <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a
-                href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                href="javascript:chartGroup.filterAll(); chartGroup.redrawAll();">Reset All</a>
         </div>
     </div>
     <table class="table table-hover dc-data-table">
