rescale bar chart when redrawing, because its domain is changing
otherwise the axis won't redraw and bars will be mislabelled

it's too bad that this is not automatic somehow

fixes #1770

--- a/web-src/examples/brush-ordinal.html
+++ b/web-src/examples/brush-ordinal.html
@@ -117,6 +117,7 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
             });
             return filters;
         });
+        bar.on('preRedraw', chart =>  chart.rescale());
         // display a row chart of first letters, to test filtering
         var letterDimension = cf.dimension(function(d) {
             return d.key.split(' ').map(function(s) { return s[0]; });
