Adding commits from Gordon for fixing https://github.com/dc-js/dc.js/issues/1770

--- a/web-src/examples/brush-ordinal.html
+++ b/web-src/examples/brush-ordinal.html
@@ -35,7 +35,7 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
     function sort_group(group, sort) {
         return {
             all: function() {
-                return group.all().sort(sort);
+                return group.all().slice().sort(sort);
             }
         };
     }
@@ -120,6 +120,8 @@ fake group, and then another fake group provides the integer/ordinal mapping.</p
         bar.xAxis()
             .tickValues(d3.range(short.length))
             .tickFormat(function(d) { return group.int2ord(d); });
+
+        bar.on('preRedraw', chart =>  chart.rescale());
 
         // display a row chart of first letters, to test filtering
         var letterDimension = cf.dimension(function(d) {
