--- a/web-src/examples/multi-focus.html
+++ b/web-src/examples/multi-focus.html
@@ -45,62 +45,18 @@ d3.csv("morley.csv").then(function(experiments) {
             .brushOn(false)
             .yAxisLabel("This is the Y Axis!")
             .dimension(runDimension)
+            .configure({autoFocus: true})
             .group(speedSumGroup);
         return chart;
     }
 
     bar_chart(chart1)
-        .brushOn(true);
+        .brushOn(true)
+        .configure({autoFocus: false});
+
     bar_chart(chart2);
     bar_chart(chart3);
     bar_chart(chart4);
-
-    // this example was inspired by this Stack Overflow question:
-    // http://stackoverflow.com/questions/27445259/dc-js-applying-range-chart-to-multiple-graphs
-
-    // it would be nice to include the functionality in dc.js proper, but we'd have to deal with the
-    // complementary part of having each focus chart change the range chart when it is zoomed
-    // and that requires more thinking: https://github.com/dc-js/dc.js/issues/820
-
-    // we need to this helper function out of coordinateGridMixin
-    function rangesEqual(range1, range2) {
-        if (!range1 && !range2) {
-            return true;
-        }
-        else if (!range1 || !range2) {
-            return false;
-        }
-        else if (range1.length === 0 && range2.length === 0) {
-            return true;
-        }
-        else if (range1[0].valueOf() === range2[0].valueOf() &&
-            range1[1].valueOf() === range2[1].valueOf()) {
-            return true;
-        }
-        return false;
-    }
-
-    // monkey-patch the first chart with a new function
-    // technically we don't even need to do this, we could just change the 'filtered'
-    // event externally, but this is a bit nicer and could be added to dc.js core someday
-    chart1.focusCharts = function (chartlist) {
-        if (!arguments.length) {
-            return this._focusCharts;
-        }
-        this._focusCharts = chartlist; // only needed to support the getter above
-        this.on('filtered', function (range_chart) {
-            chartlist.forEach(function(focus_chart) {
-                if (!rangesEqual(range_chart.filter(), focus_chart.filter())) {
-                    dc.events.trigger(function () {
-                        focus_chart.focus(range_chart.filter());
-                    });
-                }
-            });
-        });
-        return this;
-    };
-
-    chart1.focusCharts([chart2,chart3,chart4]);
 
     dc.renderAll();
 });
