--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -104,7 +104,7 @@
               .brushOn(false)
               .clipPadding(10)
               .title(function(d) {
-                  return d.key + '[' + this.layer + ']: ' + d.value[this.layer];
+                  return d.key + '[' + this.name + ']: ' + d.value[this.name];
               })
               .dimension(runExptDim)
               .group(stackedGroup, "1", sel_stack('1'))
@@ -118,13 +118,13 @@
                   .classed('stack-deselected', function(d) {
                       // display stack faded if the chart has filters AND
                       // the current stack is not one of them
-                      var key = multikey(d.x, d.layer);
+                      var key = multikey(d.x, d.name);
                       return chart.filter() && chart.filters().indexOf(key)===-1;
                   })
-                  .on('click', function(d) {
-                      chart.filter(multikey(d.x, d.layer));
+                  .on('click', dc.adaptHandler(function(d) {
+                      chart.filter(multikey(d.x, d.name));
                       dc.redrawAll();
-                  });
+                  }));
           });
 
           pie
