Updated sample to visually test saving/restoring filter state - will not be part of the PR

--- a/web-src/index.html
+++ b/web-src/index.html
@@ -95,6 +95,11 @@
 <h2>Nasdaq 100 Index 1985/11/01-2012/06/29</h2>
 
 <div class="row">
+    Filter State: [<a href="javascript:saveFilterState();">Save</a>]
+    [<a href="javascript:restoreFilterState();">Restore</a>]
+</div>
+
+<div class="row">
     <div id="yearly-bubble-chart" class="dc-chart">
         <strong>Yearly Performance</strong> (radius: fluctuation/index ratio, color: gain/loss)
         <a class="reset" href="javascript:yearlyBubbleChart.filterAll();chartGroup.redrawAll();"
