Set color explicitly as `ordinalColors`

--- a/web-src/examples/adjustable-threshold.html
+++ b/web-src/examples/adjustable-threshold.html
@@ -58,7 +58,7 @@
         .elasticY(true)
         .x(d3.scaleBand())
         .xUnits(dc.units.ordinal)
-        .colors(["orange"])
+        .ordinalColors(["orange"])
         .yAxis().ticks(5);
 
     //## pie chart
