Alternate approach for ordinal brushing and zooming

--- a/web-src/examples/focus-ordinal-bar.html
+++ b/web-src/examples/focus-ordinal-bar.html
@@ -11,11 +11,10 @@
 <div class="container">
 <script type="text/javascript" src="header.js"></script>
 <p>This example demonstrates using range and focus charts to scroll an ordinal bar chart
-  with too many items. Instead of filtering, the brush only changes the view; bars are
-  clickable as in an ordinary ordinal bar chart.</p>
+  with too many items.</p>
 <p>Since ordinal-scale charts are not ordinarily brushable or zoomable, the example maps
   the ordinal values to integers, and then maps the integers back to the values for the
-  axis ticks.</p>
+  axis ticks and bar titles.</p>
 <div id="range"></div>
 <div id="focus">
   <a class="reset" style="visibility: hidden" href="javascript:focus.filterAll(); dc.redrawAll()">reset</a>
@@ -41,51 +40,51 @@
     // we need a slight delay to enable debounce, but a large delay is annoying for brushing
     dc.constants.EVENT_DELAY = 10;
 
+    class Mapper {
+        constructor (keys) {
+            this._int2ord = [];
+            this._ord2int = {};
 
-    // index a group key -> i and i -> key
-    function ordinal_to_linear_group(group, sort) {
-        var _ord2int, _int2ord;
-        return {
-            all: function() {
-                var ret = group.all();
-                _ord2int = {};
-                _int2ord = [];
-                ret.forEach(function(d, i) {
-                    _ord2int[d.key] = i;
-                    _int2ord[i] = d.key;
-                });
-                return ret;
-            },
-            ord2int: function(o) {
-                if(!_ord2int)
-                    this.all();
-                return _ord2int[o];
-            },
-            int2ord: function(i) {
-                if(!_int2ord)
-                    this.all();
-                return _int2ord[i];
-            }
-        };
+            keys.forEach(key => {
+                if(!this._ord2int.hasOwnProperty(key)) {
+                    this._ord2int[key] = this._int2ord.length;
+                    this._int2ord.push(key);
+                }
+            });
+        }
+
+        ord2int(ord) {
+            return this._ord2int[ord];
+        }
+
+        int2ord(i) {
+            return this._int2ord[i];
+        }
+
+        length() {
+            return this._int2ord.length;
+        }
     }
 
     // phrases generated with https://www.fourmilab.ch/javascrypt/pass_phrase.html
     var focus, range;
     d3.json("wide-ordinal.json").then(function(wide) {
+        // extract and sort keys, these will be assigned indices starting from 0 by the mapper
+        const keys = wide.map(d => d.key).sort((a,b) => d3.ascending(a,b));
+        const mappings =  new Mapper(keys);
+
         // dummy crossfilter taking group data and regrouping it to the same thing
         var cf = crossfilter(wide),
-            dimension = cf.dimension(function(d) {return d.key;}),
+            dimension = cf.dimension(function(d) {return mappings.ord2int(d.key);}),
             group = dimension.group().reduceSum(function(d) {return d.value;});
 
-        group = ordinal_to_linear_group(group);
         focus = new dc.BarChart('#focus');
-        var linear_domain = [-0.5, wide.length - 0.5];
+        var linear_domain = [-0.5, mappings.length() - 0.5];
         focus
             .width(1000).height(330)
             .margins({left: 60, top: 0, right: 10, bottom: 145})
             .x(d3.scaleLinear().domain(linear_domain))
             .xUnits(dc.units.integers)
-            .keyAccessor(kv => group.ord2int(kv.key))
             .controlsUseVisibility(true)
             .centerBar(true)
             .yAxisLabel('counts')
@@ -94,54 +93,13 @@
             .dimension(dimension)
             .mouseZoomable(true)
             .zoomScale([4,8])
+            .configure({autoFocus: true})
             .group(group)
-            .title(kv => kv.key)
+            .title(kv => mappings.int2ord(kv.key))
             .transitionDuration(0);
 
         focus.xAxis()
-            .tickFormat(function(d) { return group.int2ord(d); });
-
-        // unfortunately we have to recreate click-selection, since a focus chart
-        // ordinarily filters to the visible area (and we don't want a brush either)
-        var focusFilter = [];
-        focus.filterHandler(function() {}); // disable built-in filtering
-        focus.applyFilter = function() { // non-standard method
-            if(focusFilter.length)
-                this.dimension().filterFunction(function(k) {
-                    return focusFilter.includes(k);
-                });
-            else this.dimension().filter(null);
-        };
-        focus.filterAll = function() {
-            focusFilter = [];
-            this.applyFilter();
-        };
-        focus.fadeDeselectedArea = function (brushSelection) {
-            var _chart = this;
-            var bars = _chart.chartBodyG().selectAll('rect.bar');
-            if (focusFilter.length) {
-                bars.classed(dc.constants.SELECTED_CLASS, function (d) {
-                    return focusFilter.includes(d.data.key);
-                });
-                bars.classed(dc.constants.DESELECTED_CLASS, function (d) {
-                    return !focusFilter.includes(d.data.key);
-                });
-            } else {
-                bars.classed(dc.constants.SELECTED_CLASS, false);
-                bars.classed(dc.constants.DESELECTED_CLASS, false);
-            }
-        };
-        focus.on('pretransition', function(chart) {
-            chart.selectAll('rect.bar').on('click.ordinal-select', function(d) {
-                var i = focusFilter.indexOf(d.data.key);
-                if(i >= 0)
-                    focusFilter.splice(i, 1);
-                else
-                    focusFilter.push(d.data.key);
-                chart.applyFilter();
-                chart.redrawGroup();
-            });
-        });
+            .tickFormat(function(d) { return mappings.int2ord(d); });
 
         focus.on('preRedraw', function(chart) {
             var domain = chart.x().domain(),
@@ -150,21 +108,16 @@
         });
 
         range = new dc.BarChart('#range');
-        range.filterHandler(function() {}); // disable built-in filtering
         range
             .margins({left: 74, top: 0, right: 20, bottom: 2})
             .width(1000).height(20)
             .x(d3.scaleLinear().domain(linear_domain))
             .xUnits(dc.units.integers)
-            .keyAccessor(kv => group.ord2int(kv.key))
             .elasticY(true)
             .brushOn(true)
             .dimension(dimension)
             .group(group)
             .transitionDuration(0);
-
-        focus
-            .rangeChart(range)
 
         // display a row chart of first letters, to test filtering
         var letterDimension = cf.dimension(function(d) {
@@ -177,12 +130,16 @@
             .width(1000)
             .height(350)
             .gap(1)
+            .elasticX(true)
             .dimension(letterDimension)
+            .transitionDuration(200)
             .group(letterGroup);
 
         dc.renderAll();
+
+        // Set initial focus
         focus
-            .focus([-0.5,60])
+            .focus([200,260])
 
     });
 
