refactor(examples): update scatter top title
courtesy of @gordonwoodhull

Co-authored-by: Gordon Woodhull <gordon@woodhull.com>

--- a/web-src/examples/scatter-top.html
+++ b/web-src/examples/scatter-top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>dc.js - Scatter Plot Example</title>
+    <title>dc.js - Scatter Plot Top X Axis Example</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/dc.css"/>
