feat(examples): make room for the x axis label

--- a/web-src/examples/scatter-top.html
+++ b/web-src/examples/scatter-top.html
@@ -31,6 +31,7 @@ d3.csv("morley.csv").then(function(experiments) {
   chart
     .width(768)
     .height(480)
+    .margins({top: 30, right: 0, bottom: 10, left: 30})
     .x(d3.scaleLinear().domain([6,20]))
     .useTopXAxis(true)
     .xAxisLabel("This is the X Axis!")
