Remove adaptHandler - removed from dc@v5

--- a/web-src/examples/filter-stacks.html
+++ b/web-src/examples/filter-stacks.html
@@ -121,10 +121,10 @@
                       var key = multikey(d.x, d.name);
                       return chart.filter() && chart.filters().indexOf(key)===-1;
                   })
-                  .on('click', dc.adaptHandler(function(d) {
+                  .on('click', function(evt, d) {
                       chart.filter(multikey(d.x, d.name));
                       dc.redrawAll();
-                  }));
+                  });
           });
 
           pie
